Squashed commit of the following:
commit 522cc980fdbcfb34a4096998d07d0b2e5d039c23
Author: vnugent <public@vaughnnugent.com>
Date:   Wed Jul 30 11:17:45 2025 -0400

    chore(changelog): update changelog and fix urls

commit 69072d9b37da3964900dc4d105acc7d60df968b3
Merge: 9f93f17 fdd3528
Author: vnugent <public@vaughnnugent.com>
Date:   Wed Jul 30 10:56:15 2025 -0400

    merge branch 'feature/no-ref/changelog' into 'develop'

commit fdd352897dc0f78aa89cfaea1c9b6fa39d910775
Merge: a444a3c 450446e
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jul 29 23:18:47 2025 -0400

    Merge branch 'develop' into feature/no-ref/changelog

commit 9f93f17f8540fcfaeca94656fc5a853d4460ed0c
Merge: 450446e 4b07e2c
Author: vman <public@vaughnnugent.com>
Date:   Tue Jul 29 21:00:07 2025 -0400

    Merge branch 'feature/no-ref/readme-update' into develop

commit 4b07e2c369f2a9bae7272043bf61d0137aeb8e55
Merge: 0a5bdc5 450446e
Author: vman <public@vaughnnugent.com>
Date:   Tue Jul 29 20:51:26 2025 -0400

    Merge branch 'develop' into feature/no-ref/readme-update

commit 450446ee70afd66e70f123e3ca326ee61c0f660d
Merge: 057eb8a 43253eb
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jul 29 17:26:12 2025 -0400

    merge branch 'fix/no-ref/npm-package' into 'develop'

commit 43253ebc3ecd021c58d4dfc683c3f60d69fb5dbd
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jul 29 16:01:07 2025 -0400

    fix: fix vnlib.browser distribution package using npm pack

    Fixed the ci builds so that the vnlib.browser tarballs will be build correctly for distribution by using npm pack and renaming the file.

commit 057eb8a56097f709b40ad27e6084f40f762bde0a
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jul 29 15:12:16 2025 -0400

    ci: fix git mirror push triggers

commit 0a5bdc5a927a115e584a8aec80ca9fa73edf5b87
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jul 29 15:10:20 2025 -0400

    chore(readme): update library readme to include latest vnlib information

commit a444a

--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,17 +1,17 @@
 version: 40
 properties:
 - name: deps_core_version
-  value: v0.1.2-rc.6
+  value: v0.1.2-rc.7
   archived: false
 - name: deps_extensions_version
-  value: v0.1.2-rc.4
+  value: v0.1.2-rc.5
   archived: false
 - name: deps_caching_version
-  value: v0.1.2-rc.4
+  value: v0.1.2-rc.5
   archived: false
 
 jobs:
-- name: GitHub Push
+- name: Git Mirror Push
   steps:
   - !PushRepository
     name: Github push sync
@@ -30,10 +30,8 @@ jobs:
     condition: SUCCESSFUL
     optional: false
   triggers:
-  - !TagCreateTrigger
-    projects: Plugins.Essentials
-  - !BranchUpdateTrigger
-    projects: Plugins.Essentials
+   - !TagCreateTrigger {}
+   - !BranchUpdateTrigger {}
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
@@ -47,10 +45,10 @@ jobs:
     runInContainer: false
     interpreter: !DefaultInterpreter
       commands: |
-        git clone @server_url@/@project_name@ --branch @branch@
-        git clone @server_url@/VNLib.Core core --branch @property:deps_core_version@
-        git clone @server_url@/VNLib.Data.Caching --branch @property:deps_caching_version@
-        git clone @server_url@/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
+        git clone @server_url@/@project_path@ --branch @branch@ @project_name@
+        git clone @server_url@/vnuge/vnlib/VNLib.Core core --branch @property:deps_core_version@
+        git clone @server_url@/vnuge/vnlib/VNLib.Data.Caching --branch @property:deps_caching_version@
+        git clone @server_url@/vnuge/vnlib/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
     useTTY: true
     condition: SUCCESSFUL
     optional: false
@@ -90,10 +88,10 @@ jobs:
     runInContainer: false
     interpreter: !DefaultInterpreter
       commands: |
-        git clone @server_url@/@project_name@ --branch @branch@
-        git clone @server_url@/VNLib.Core core --branch @property:deps_core_version@
-        git clone @server_url@/VNLib.Data.Caching --branch @property:deps_caching_version@
-        git clone @server_url@/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
+        git clone @server_url@/@project_path@ --branch @branch@ @project_name@
+        git clone @server_url@/vnuge/vnlib/VNLib.Core core --branch @property:deps_core_version@
+        git clone @server_url@/vnuge/vnlib/VNLib.Data.Caching --branch @property:deps_caching_version@
+        git clone @server_url@/vnuge/vnlib/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
     useTTY: true
     condition: SUCCESSFUL
     optional: false
@@ -137,10 +135,10 @@ jobs:
     runInContainer: false
     interpreter: !DefaultInterpreter
       commands: |
-        git clone @server_url@/@project_name@ --branch @branch@
-        git clone @server_url@/VNLib.Core core --branch @property:deps_core_version@
-        git clone @server_url@/VNLib.Data.Caching --branch @property:deps_caching_version@
-        git clone @server_url@/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
+        git clone @server_url@/@project_path@ --branch @branch@ @project_name@
+        git clone @server_url@/vnuge/vnlib/VNLib.Core core --branch @property:deps_core_version@
+        git clone @server_url@/vnuge/vnlib/VNLib.Data.Caching --branch @property:deps_caching_version@
+        git clone @server_url@/vnuge/vnlib/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
     useTTY: true
     condition: SUCCESSFUL
     optional: false
