Squashed commit of the following:
commit e6b12cfb472e0ac92457c267e40b8547572e341b
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Aug 15 17:27:13 2025 -0400

    review(router): unsubscribe from xml route listener when plugin unloads to avoid strong references.

commit b0f5e9e105b18693c958dccf5cc5a5c65570f8f9
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Aug 15 17:26:05 2025 -0400

    review: correct `PageRouterEntry` code style

commit cbb5f80707b793aca51f8af0ea938d46c99139ac
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Aug 15 16:52:03 2025 -0400

    chore(changelog): update changelog and add commit change links

commit 9eba04aa0f4a3b942b19245da8c0cef854e0042e
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Aug 15 16:46:58 2025 -0400

    fix(browser): fix api type merging issue in latest typescript updates

commit 66a78a1c36712b3a4191b619bdce2c55058ceb86
Merge: 3ae4dc1 181a2bd
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Aug 15 16:26:19 2025 -0400

    merge branch 'chore/no-ref/deps-update' into 'develop'

commit 181a2bd22a7ff2a8fb9dcb845a99a3e4cb1a8c1d
Merge: d37237f 3ae4dc1
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Aug 15 16:21:31 2025 -0400

    Merge branch 'develop' into chore/no-ref/deps-update

commit 3ae4dc14dcd4b005bbfd25337ed77c2d6b1830eb
Merge: 9469047 86f847c
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Aug 15 16:18:44 2025 -0400

    merge branch 'feature/no-ref/remove-sql-router' into 'develop'

commit 86f847c2a6c85de9de133fd2f40d1311e444a386
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Aug 15 15:37:10 2025 -0400

    test(router): update router tests to use new syntax and configuration flags/options

    Added/updated page router unit test files to use the latest router syntax

commit 208ff19ff964cd643ddb946af32e35a2d397daeb
Author: vnugent <public@vaughnnugent.com>
Date:   Fri Aug 15 15:36:15 2025 -0400

    fix(router): fall back to no route store when store unconfigured, warn 

--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,13 +1,13 @@
 version: 40
 properties:
 - name: deps_core_version
-  value: v0.1.2-rc.7
+  value: master/v0.1.2-rc.8
   archived: false
 - name: deps_extensions_version
-  value: v0.1.2-rc.5
+  value: master/v0.1.2-rc.6
   archived: false
 - name: deps_caching_version
-  value: v0.1.2-rc.5
+  value: master/v0.1.2-rc.6
   archived: false
 
 jobs:
@@ -30,8 +30,8 @@ jobs:
     condition: SUCCESSFUL
     optional: false
   triggers:
-   - !TagCreateTrigger {}
-   - !BranchUpdateTrigger {}
+  - !TagCreateTrigger {}
+  - !BranchUpdateTrigger {}
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
@@ -40,16 +40,9 @@ jobs:
 - name: Unit Testing
   jobExecutor: windows
   steps:
-  - !CommandStep
-    name: Clone local deps
-    runInContainer: false
-    interpreter: !DefaultInterpreter
-      commands: |
-        git clone @server_url@/@project_path@ --branch @branch@ @project_name@
-        git clone @server_url@/vnuge/vnlib/VNLib.Core core --branch @property:deps_core_version@
-        git clone @server_url@/vnuge/vnlib/VNLib.Data.Caching --branch @property:deps_caching_version@
-        git clone @server_url@/vnuge/vnlib/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
-    useTTY: true
+  - !UseTemplateStep
+    name: checkout deps
+    templateName: checkout deps
     condition: SUCCESSFUL
     optional: false
   - !CommandStep
@@ -83,26 +76,16 @@ jobs:
 - name: Staging build
   jobExecutor: windows
   steps:
-  - !CommandStep
-    name: Clone local deps
-    runInContainer: false
-    interpreter: !DefaultInterpreter
-      commands: |
-        git clone @server_url@/@project_path@ --branch @branch@ @project_name@
-        git clone @server_url@/vnuge/vnlib/VNLib.Core core --branch @property:deps_core_version@
-        git clone @server_url@/vnuge/vnlib/VNLib.Data.Caching --branch @property:deps_caching_version@
-        git clone @server_url@/vnuge/vnlib/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
-    useTTY: true
+  - !UseTemplateStep
+    name: checkout deps
+    templateName: checkout deps
     condition: SUCCESSFUL
     optional: false
   - !CommandStep
-    name: VNBuild build
+    name: mock build
     runInContainer: false
     interpreter: !DefaultInterpreter
       commands: |
-        dotnet gitversion core /updateprojectfiles
-        dotnet gitversion VNLib.Data.Caching /updateprojectfiles
-        dotnet gitversion VNLib.Plugins.Extensions /updateprojectfiles
         vnbuild build --no-delay --include @project_name@ --verbose
     useTTY: true
     condition: SUCCESSFUL
@@ -130,20 +113,13 @@ jobs:
 - name: Publish master
   jobExecutor: publish-agents
   steps:
-  - !CommandStep
-    name: Clone local deps
-    runInContainer: false
-    interpreter: !DefaultInterpreter
-      commands: |
-        git clone @server_url@/@project_path@ --branch @branch@ @project_name@
-        git clone @server_url@/vnuge/vnlib/VNLib.Core core --branch @property:deps_core_version@
-        git clone @server_url@/vnuge/vnlib/VNLib.Data.Caching --branch @property:deps_caching_version@
-        git clone @server_url@/vnuge/vnlib/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
-    useTTY: true
+  - !UseTemplateStep
+    name: checkout deps
+    templateName: checkout deps
     condition: SUCCESSFUL
     optional: false
   - !CommandStep
-    name: Create git tag
+    name: create git tag
     runInContainer: false
     interpreter: !DefaultInterpreter
       commands: |
@@ -157,9 +133,6 @@ jobs:
     runInContainer: false
     interpreter: !DefaultInterpreter
       commands: |
-        dotnet gitversion core /updateprojectfiles
-        dotnet gitversion VNLib.Data.Caching /updateprojectfiles
-        dotnet gitversion VNLib.Plugins.Extensions /updateprojectfiles
         vnbuild build --no-delay --include @project_name@
     useTTY: true
     condition: SUCCESSFUL
@@ -185,3 +158,18 @@ jobs:
   maxRetries: 3
   retryDelay: 30
   timeout: 14400
+stepTemplates:
+- name: checkout deps
+  steps:
+  - !CommandStep
+    name: checkout local deps
+    runInContainer: false
+    interpreter: !DefaultInterpreter
+      commands: |
+        git clone @server_url@/@project_path@ --branch @branch@ @project_name@
+        task -t @project_name@/Module.Taskfile.yaml configure-dep "DEP_REPO=@server_url@/vnuge/vnlib/VNLib.Core" "DEP_REVISION=@property:deps_core_version@" "DEP_DIR=core"
+        task -t @project_name@/Module.Taskfile.yaml configure-dep "DEP_REPO=@server_url@/vnuge/vnlib/VNLib.Data.Caching" "DEP_REVISION=@property:deps_caching_version@"
+        task -t @project_name@/Module.Taskfile.yaml configure-dep "DEP_REPO=@server_url@/vnuge/vnlib/VNLib.Plugins.Extensions" "DEP_REVISION=@property:deps_extensions_version@"       
+    useTTY: true
+    condition: SUCCESSFUL
+    optional: false
