--- a/Module.Taskfile.yaml
+++ b/Module.Taskfile.yaml
@@ -12,18 +12,13 @@ version: '3'
 
 vars:
   ARCHIVE_FILE_NAME: '{{ .ARCHIVE_FILE_NAME | default "archive.tgz" }}'
-  MS_ARGS: 
-    /p:RunAnalyzersDuringBuild=false 
-    /p:BuildInParallel=true 
-    /p:MultiProcessorCompilation=true 
-    /p:ErrorOnDuplicatePublishOutputFiles=false  
 
 tasks:
 
   default:
     desc: 'Builds the managed libraries in this module for development'
     cmds:
-      - cmd: dotnet build -c debug {{ .MS_ARGS }} {{ .CLI_ARGS }}
+      - cmd: dotnet build -c debug {{ .CLI_ARGS }}
 
   #called by build pipeline to sync repo
   update:
@@ -69,8 +64,7 @@ tasks:
     vars:
       PACK_OUT: '{{ .OUTPUT_DIR }}/{{ .HEAD_SHA }}/pkg'
       INT_DIR: '{{ .SCRATCH_DIR }}/obj/{{ .MODULE_NAME }}/'
-      MS_ARGS: ' 
-        {{ .MS_ARGS }} 
+      MS_ARGS: '
         --nologo
         /p:UseCommonOutputDirectory=true 
         /p:IntermediateOutputPath="{{ .INT_DIR }}"'
@@ -78,7 +72,7 @@ tasks:
      - cmd: echo "building module {{ .MODULE_NAME }}" 
        silent: true
 
-    #re-write semver after hard reset
+     #re-write semver after hard reset
      - cmd: dotnet gitversion /updateprojectfiles
 
      #build debug mode first
@@ -110,13 +104,12 @@ tasks:
       ARGON2_LIB_PATH: '{{ .USER_WORKING_DIR }}/../core/lib/Utils.Cryptography/argon2/{{ .NATIVE_BUILD_PATH }}argon2'
     cmds:
      - cmd: dotnet build 
-        {{ .MS_ARGS }}
         --configuration debug 
         --nologo 
-        --verbosity minimal
+        --verbosity normal
+        --no-incremental
 
      - cmd: dotnet test
-        {{ .CLI_ARGS }}
         --logger "console;verbosity=detailed"
         --no-build
         --nologo
@@ -125,6 +118,7 @@ tasks:
         --framework {{ .TARGET_FRAMEWORK | default "net8.0" }}
         --environment TEST_CONFIG_DIR="{{ .CONFIG_DIR }}"
         --environment VNLIB_ARGON2_DLL_PATH="{{ .ARGON2_LIB_PATH }}"
+        {{ .CLI_ARGS }}
 
 #called by build pipeline to clean module
   clean:
@@ -132,7 +126,7 @@ tasks:
     ignore_error: true
     cmds:
     #clean solution
-     - cmd: dotnet clean /p:BuildInParallel=true /p:MultiProcessorCompilation=true
+     - cmd: dotnet clean
      - cmd: powershell rm '{{ .ARCHIVE_FILE_NAME }}' --Force
 
 
