--- a/ci/cliff.toml
+++ b/ci/cliff.toml
@@ -73,6 +73,9 @@ commit_parsers = [
     # Breaking changes (must come first to catch before other parsers)
     { message = "^.*\\)!", breaking = true },
 
+    { message = "chore(changelog)", skip = true },
+    { message = "update changelog", skip = true },   
+
     # Features and additions
     { message = "^feat(\\(.*\\))?:", group = "Added" },
     { message = "^add(\\(.*\\))?:", group = "Added" },
@@ -92,6 +95,7 @@ commit_parsers = [
     { message = "^refactor(:|\\(.*\\):).*", group = "Changed" },
     { message = "^chore\\(deps\\):", group = "Changed" },
     { message = "^chore\\(.*\\): update( |d|s)?\\b.*", group = "Changed" },
+    { message = "^doc(s?)(:|\\(.*\\):).*", group = "Changed" },
 
     # Removals
     { message = "^remove(\\(.*\\))?:", group = "Removed" },
@@ -101,13 +105,12 @@ commit_parsers = [
 
     # Performance upgrades
     { message = "^perf(\\(.*\\))?:", group = "Performance" },
+    { message = "^pref(\\(.*\\))?:", group = "Performance" },
 
     #skip ci and specific chore tasks
     { message = ".*\\[no ci\\].*", skip = true },
-    { message = "^review:", skip = true },
-    { message = "^ci(:|\\(.*\\):| )", skip = true },
-    { message = "update changelog", skip = true },
-    { message = "chore(changelog)", skip = true },
+    { message = "^review(\\(.*\\))?:", skip = true },
+    { message = "^ci(:|\\(.*\\):| )", skip = true },     
     { message = "^chore.*", skip = true },
     { message = "^style.*", skip = true },
 
