--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -7,7 +7,7 @@ properties:
   value: master/v0.1.2
   archived: false
 - name: deps_caching_version
-  value: develop/HEAD
+  value: master/v0.1.2
   archived: false
 
 jobs:
