--- a/Module.Taskfile.yaml
+++ b/Module.Taskfile.yaml
@@ -127,7 +127,7 @@ tasks:
     cmds:
     #clean solution
      - cmd: dotnet clean
-     - cmd: powershell rm '{{ .ARCHIVE_FILE_NAME }}' --Force
+     - cmd: rm -f '{{ .ARCHIVE_FILE_NAME }}'
 
 
   npm-update:
