Squashed commit of the following:
commit 2cbb1e871b283f4c2ced51c1ee8ccacd11425071
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Oct 16 16:06:59 2025 -0400

    chore(changelog): Update changelog for v0.1.3

commit 978ca5421113395c79e66b42f872b205cf82f95c
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Oct 16 16:04:57 2025 -0400

    correct type and cross platform commands

commit 0f39322d3c8b34bbc147609c65ca0359b899b122
Merge: f03fe21 76055bf
Author: vnugent <public@vaughnnugent.com>
Date:   Thu Oct 16 12:13:51 2025 -0400

    merge branch 'v0.1.3' into 'develop'

commit 76055bfecbc9dc13b5a62c3802661ab7270ddf73
Author: vman <public@vaughnnugent.com>
Date:   Wed Oct 15 12:04:42 2025 -0400

    correct default source tarball command

commit a40ecffcf39cc0e9eee4864e0434f88c3683da31
Author: vman <public@vaughnnugent.com>
Date:   Tue Oct 14 13:06:02 2025 -0400

    build: Update build scripts to support Task v3.45 cross platform syntax

commit 3af4f7db9290c41cebfe3e918c0b057dfb44d0b1
Author: vman <public@vaughnnugent.com>
Date:   Tue Oct 14 12:39:22 2025 -0400

    chore(deps): Update npm dependencies

commit 26501dc029eacaeeac9040126fdae7800fc1aa26
Author: vman <public@vaughnnugent.com>
Date:   Tue Oct 14 12:34:39 2025 -0400

    chore(deps): Update vnlib.data.caching to v0.1.3

commit c6a2a009c0a516c666c734bc07da918674c2d03b
Author: vman <public@vaughnnugent.com>
Date:   Tue Oct 14 12:34:15 2025 -0400

    chore(deps): Update vnlib.plugins.extensions to v0.1.3

commit 477c291649dbb04e06d375d278c6adc95b509a14
Author: vman <public@vaughnnugent.com>
Date:   Tue Oct 14 12:33:47 2025 -0400

    chore(deps): Update vnlib.core to v0.1.3

commit f03fe2156c803335c3f92ee063bc0d3639c6b40e
Merge: 1a98f8f 76b6b6c
Author: vnugent <public@vaughnnugent.com>
Date:   Sun Sep 21 15:05:17 2025 -0400

    merge branch 'master' into 'develop'

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -12,33 +12,44 @@ version: '3'
 vars:
   TARGET_FRAMEWORK: '{{ .TARGET_FRAMEWORK | default "net8.0" }}'
   BINARY_DIR: '{{ .BINARY_DIR | default "bin" }}'
-  RELEASE_DIR: "{{ .BINARY_DIR }}/release/{{ .TARGET_FRAMEWORK }}/publish"
+  RELEASE_DIR: "./bin/release/{{ .TARGET_FRAMEWORK }}/publish"
+  TARGET_DIR: '{{ .USER_WORKING_DIR }}/{{ .BINARY_DIR }}'
 
 tasks:
-  
+
   default:
-    desc: 'Builds a single managed library when run from a project root'
-    dir: '{{ .USER_WORKING_DIR }}'
+    desc: 'When run from a library directory, builds the managed project'
+    dir: "{{ .USER_WORKING_DIR }}"
     vars:
       CONFIGURATION: '{{ .CONFIGURATION | default "release" }}'
     cmds:
-      - cmd: dotnet build -c {{ .CONFIGURATION }} {{ .CLI_ARGS }}
+     - cmd: cd src/ && 
+        dotnet build 
+        --configuration {{ .CONFIGURATION }} 
+        --verbosity detailed
+        {{ .CLI_ARGS }}
+    
 
   #when build succeeds, archive the output into a tgz 
   postbuild_success:
     dir: '{{ .USER_WORKING_DIR }}'
     cmds:
-     #pack up source code
-     - task: packsource
+     #remove unnecessary files from the release dir
+     - cmd: powershell -Command "Get-ChildItem -Recurse '{{ .RELEASE_DIR }}/' -Include *.pdb,*.xml | Remove-Item"
+       platforms: [ "windows" ]
+     - cmd: cd '{{ .RELEASE_DIR }}' && rm -f *.pdb *.xml
+       platforms: [ "linux", "darwin" ]
 
-     #run post in debug mode
+     - task: pack-parallel
+
+  pack-parallel:
+    internal: true
+    deps:
+     - task: packsource
+     
      - task: postbuild
        vars: { BUILD_MODE: debug }
-
-     #remove uncessary files from the release dir
-     - cmd: powershell -Command "Get-ChildItem -Recurse '{{ .RELEASE_DIR }}/' -Include *.pdb,*.xml | Remove-Item"
-
-     #run post in release mode
+     
      - task: postbuild
        vars: { BUILD_MODE: release }
 
@@ -53,14 +64,12 @@ tasks:
     internal: true
     vars:
       #the build output directory
-      BUILD_OUT: "{{ .BINARY_DIR }}/{{ .BUILD_MODE }}/{{ .TARGET_FRAMEWORK }}/publish" 
-
+      BUILD_OUT: "{{ .BINARY_DIR }}/{{ .BUILD_MODE }}/{{ .TARGET_FRAMEWORK }}/publish"
     cmds:
-     #copy license and readme to target
-     - cmd: powershell cp '../build.readme.md' '{{ .BUILD_OUT }}/readme.md'
+     - cmd: cp '../build.readme.md' '{{ .BUILD_OUT }}/readme.md'
 
      #tar outputs
-     - cmd: cd "{{ .BUILD_OUT }}" && tar -czf "{{ .USER_WORKING_DIR }}/{{ .BINARY_DIR }}/{{ .BUILD_MODE }}.tgz" .
+     - cmd: cd "{{ .BUILD_OUT }}" && tar{{ if eq OS "windows" }}.exe{{ end }} -czf "{{ .TARGET_DIR }}/{{ .BUILD_MODE }}.tgz" .
  
   packsource:
     dir: '{{ .USER_WORKING_DIR }}'
@@ -70,13 +79,14 @@ tasks:
         --exclude="bin"
         --exclude="obj"
     cmds:
-    #copy source code to target
-    - cmd: tar {{ .EXCLUDES }} -czf '{{ .BINARY_DIR }}/src.tgz' .
+      #pack up source code and put in output
+     - cmd: tar{{ if eq OS "windows" }}.exe{{ end }}
+         {{ .EXCLUDES }} -czf '{{ .USER_WORKING_DIR }}/{{ .BINARY_DIR }}/src.tgz' .
 
 #Remove the output dirs on clean
   clean:
     dir: '{{ .USER_WORKING_DIR }}'
     ignore_error: true
     cmds:
-     - for: ['bin/', 'obj/']
-       cmd: powershell rm -Recurse '{{ .ITEM }}'
+    - for: [ bin/, obj/ ]
+      cmd: rm -rf '{{ .ITEM }}'
